# my-uvpackage-creator

./: README.md
uv_manager/: pyproject.toml
uv_manager/src/my_project_creator/: cli.py
