# ============================================================================ #
# BUILD SYSTEM CONFIGURATION                                                   #
# ============================================================================ #
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project_creator"]

# ============================================================================ #
# PROJECT CONFIGURATION                                                        #
# ============================================================================ #
[project]
name = "my_project_creator"
version = "0.1.0"
requires-python = ">=3.12"
description = "A package for creating folder structure for ne uv packages"
license = { file = "LICENSE" }
authors = [{ name = "Athma Narayanan" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
create = "my_project_creator.cli:main"
